--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
 
 input[type=range] {
 	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
 input[type=range]:focus {
@@ -42,7 +43,6 @@ input[type=range]::-webkit-slider-runnable-track {
   cursor: pointer;
   background: #999999;
   border-radius: 2px;
-  
 }
 input[type=range]::-webkit-slider-thumb {
   height: 20px;
@@ -51,6 +51,7 @@ input[type=range]::-webkit-slider-thumb {
   background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
+  -moz-appearance: none;
   margin-top: -8px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
@@ -113,7 +114,8 @@ a {
 
 #header {
 	position: relative;
-	height: 60px;
+	height: 8%;
+	min-height: 60px;
 	border-bottom: 1px solid #4D4D4D;
 	margin: 0 10px;
 }
@@ -160,6 +162,7 @@ a {
 	margin-left: 10px;
 	background-color: inherit;
 	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
 #play {
@@ -260,9 +263,7 @@ a {
 }
 
 #tracks {
-	position: absolute;
-	top: 60px;
-	bottom: 0;
+	height: 85%;
 	width: 100%;
 }
 
@@ -435,6 +436,7 @@ a {
 	color: #FFFFFF;
 	outline: 0;
 	-webkit-appearance: none;
+	-moz-appearance: none;
 	opacity: 0.5;
 }
 
