--- a/css/main.css
+++ b/css/main.css
@@ -726,6 +726,10 @@ button {
 	}
 }
 
+.faded {
+	opacity: 0.2;
+}
+
 /**
  * For modern browsers
  * 1. The space content is one way to avoid an Opera bug when the
